@@ -7,6 +7,7 @@
   * Fixed a bug in the DRXFile when dealing with small gaps in the data
   * Updated lsl.reader.errors.SyncError to allow for reporting of non-Mark5C problems
   * Update the documentation for lsl.common.idf, sdf, and sdfADP
+  * Added missing sub, isub, div, and idiv operators to lsl.reader.base.FrameBase
 
 2.0.0
   * Major API changes to put LSL under a uniform coding style
